--- a/src/main/resources/templates/admin/rejected_verifications.html
+++ b/src/main/resources/templates/admin/rejected_verifications.html
@@ -43,7 +43,7 @@
             <td th:text="${verification.internId}"></td>
             <td th:text="${verification.companyName}"></td>
             <td th:text="${verification.email}"></td>
-            <td th:text="${verification.verifiedDate}"></td>
+            <td th:text="${#dates.format(T(java.util.Date).from(verification.verifiedDate.toInstant()), 'dd-MM-yyyy HH:mm:ss')}"></td>
             <td th:text="${verification.remarks}"></td>
           </tr>
           </tbody>
