--- a/src/main/resources/templates/admin/relieving_records_list.html
+++ b/src/main/resources/templates/admin/relieving_records_list.html
@@ -146,6 +146,7 @@
                 <th>Final Report</th>
                 <th>Attendance</th>
                 <th>Any Others</th>
+                <th>TimeStamp</th>
 
               </tr>
               </thead>
@@ -160,8 +161,8 @@
                 <td th:text="${record.firstName}"></td>
                 <td th:text="${record.groupId}"></td>
                 <td th:text="${record.collegeName}"></td>
-                <td th:text="${record.joiningDate}"></td>
-                <td th:text="${record.plannedDate}"></td>
+                <td th:text="${#dates.format(T(java.util.Date).from(record.joiningDate.toLocalDate().atStartOfDay(T(java.time.ZoneId).systemDefault()).toInstant()), 'dd-MM-yyyy')}"></td>
+                <td th:text="${#dates.format(T(java.util.Date).from(record.plannedDate.toLocalDate().atStartOfDay(T(java.time.ZoneId).systemDefault()).toInstant()), 'dd-MM-yyyy')}"></td>
                 <td th:text="${record.password}"></td>
                 <td th:text="${record.media}"></td>
                 <td th:text="${record.status}"></td>
@@ -181,6 +182,7 @@
                 <td th:text="${record.finalReport}"></td>
                 <td th:text="${record.attendance}"></td>
                 <td th:text="${record.others}"></td>
+                <td th:text="${#temporals.format(record.submissionTimestamp, 'dd-MM-yyyy HH:mm:ss')}"></td>
 
               </tr>
               </tbody>
