--- a/src/main/resources/templates/admin/task_details.html
+++ b/src/main/resources/templates/admin/task_details.html
@@ -73,11 +73,11 @@
     </tr>
     <tr>
       <th>Start Date</th>
-      <td th:text="${tasks.startDate}"></td>
+      <td th:text="${#dates.format(tasks.startDate, 'dd-MM-yyyy')}"></td>
     </tr>
     <tr>
       <th>End Date</th>
-      <td th:text="${tasks.endDate}"></td>
+      <td th:text="${#dates.format(tasks.endDate, 'dd-MM-yyyy')}"></td>
     </tr>
     <tr>
       <th>Status</th>
