--- a/src/main/resources/templates/internapply.html
+++ b/src/main/resources/templates/internapply.html
@@ -393,7 +393,7 @@ html, body {
                                 <div class="form-group mt-2" style="position: relative;">
                                     <input type="text" class="form-control"
                                            placeholder="Security Pin*" id="securityPin" name="securityPin"
-                                           required data-tooltip="Please enter your security pin">
+                                           required data-tooltip="Remember your security pin">
                                     <div class="tooltip" id="tooltip-securityPin"></div>
                                 </div>
                             </div>
