--- a/src/main/resources/templates/intern/change_passwordd.html
+++ b/src/main/resources/templates/intern/change_passwordd.html
@@ -52,6 +52,14 @@
             <div class="col-xl-12">
                 <div class="card">
                     <div class="card-body pt-3">
+                        <!-- Alert Messages -->
+                        <div th:if="${error}" class="alert alert-danger" role="alert">
+                            <span th:text="${error}"></span>
+                        </div>
+
+                        <div th:if="${success}" class="alert alert-success" role="alert">
+                            <span th:text="${success}"></span>
+                        </div>
                         <div class="tab-pane fade show active pt-3" id="profile-change-password"
                              th:classappend="${forcePasswordChange} ? 'show active' : ''">
                             <form th:action="@{'/bisag/intern/change_password'}" method="post" onsubmit="return validatePasswords()">
@@ -61,9 +69,9 @@
                                         <div class="input-group">
                                             <input name="newPassword" type="password" class="form-control" id="newPassword" required oninput="checkPasswordStrength(this.value)">
                                             <div class="input-group-append">
-                                                    <span class="input-group-text" onclick="togglePasswordVisibility('newPassword')">
-                                                        <i class="fa fa-eye" aria-hidden="true" style="font-size: 1.5rem; height: 100%;"></i>
-                                                    </span>
+                    <span class="input-group-text" onclick="togglePasswordVisibility('newPassword')">
+                        <i class="fa fa-eye" aria-hidden="true" style="font-size: 1.5rem; height: 100%;"></i>
+                    </span>
                                             </div>
                                         </div>
                                     </div>
@@ -77,6 +85,13 @@
                                 <div class="row mb-3">
                                     <div class="col-md-8 offset-md-4 col-lg-9 offset-lg-3">
                                         <small id="passwordStrengthMessage" class="text-muted">Password strength: <span id="passwordStrength">Weak</span></small>
+                                    </div>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <label for="securityPin" class="col-md-4 col-lg-3 col-form-label">Security Pin</label>
+                                    <div class="col-md-8 col-lg-9">
+                                        <input name="securityPin" type="password" class="form-control" id="securityPin" required>
                                     </div>
                                 </div>
                                 <div class="text-center">
@@ -97,9 +112,9 @@
 
         if (newPassword !== renewPassword) {
             alert("Passwords do not match!");
-            return false; // Prevent form submission
+            return false;
         }
-        return true; // Allow form submission
+        return true;
     }
 </script>
 <script>
@@ -109,12 +124,9 @@
         var strengthIndicator = document.getElementById('passwordStrength');
 
         if (password.length === 0) {
-            // Hide the strength indicator if password is empty
             strengthContainer.style.display = 'none';
         } else {
-            // Show the strength indicator
             strengthContainer.style.display = 'block';
-            // Evaluate password strength based on conditions
             var strength = 'Weak';
             if (password.length >= 6) {
                 if (/[a-z]/.test(password)) {
@@ -128,11 +140,9 @@
                     }
                 }
             }
-            // Update the password strength indicator
             strengthIndicator.textContent = strength;
         }
     }
-    // Initially hide the strength indicator
     document.getElementById('passwordStrengthMessage').style.display = 'none';
     function togglePasswordVisibility(inputId) {
         var passwordInput = document.getElementById(inputId);
@@ -154,6 +164,11 @@
     document.addEventListener("DOMContentLoaded", function() {
         document.getElementById('profile-change-password').classList.add('show', 'active');
     });
+</script>
+<script th:if="${success}">
+    setTimeout(function() {
+        window.location.href = '/login';
+    }, 1000); // Redirect after 1 second
 </script>
 </body>
 </html>
